--- a/templates/articles.html
+++ b/templates/articles.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-{% for article in object_list %}
+{% for article in object_list reversed %}
     <div class = "row">
         <div class = "column">
             <a href = "{% url 'detail' article.pk %}">
