--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <div class = "buttons" >
 <div class = "div">  
 
-    <a class = "left" href = "podcasts/"> <img src ="https://ldrsgroup.com/wp-content/uploads/2020/05/Podcast-blog-6.jpg">Подкаст</a>
+    <a class = "left" href = "podcasts/"> <img src ="https://earthweb.com/wp-content/uploads/2020/11/podcast-768x614.jpg">Подкаст</a>
 
 </div>
 <div class="div">
